- Maven build now produces a functioning app - Added non-mavenized dependencies (dexj2ar and apktool) to a local maven repo to take advantage of Maven's assembly plugin - Fixed issue when no device is connected.